[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://graphics/hslogo.png" type="Texture" id=2]
[ext_resource path="res://resources/silkscreen.fnt" type="BitmapFont" id=3]

[node name="menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="hslogo" type="Sprite" parent="."]

transform/pos = Vector2( 228.614, 158.78 )
texture = ExtResource( 2 )

[node name="label_logo" type="Label" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 216.0
margin/top = 154.0
margin/right = 473.0
margin/bottom = 202.0
custom_fonts/font = ExtResource( 3 )
text = "hypersnow games
"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 16.0
margin/right = 273.0
margin/bottom = 47.0
custom_fonts/font = ExtResource( 3 )
text = "Project Savior: Prologue
"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_controls" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 16.0
margin/right = 273.0
margin/bottom = 47.0
custom_fonts/font = ExtResource( 3 )
text = "Arrow Keys - Move
Z - Jump
Z in air - switch to ship mode (uses fuel)
X - shoot (grounded or ship mode only)
"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_credits" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 16.0
margin/right = 347.0
margin/bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "developed by hypersnow games
hypersnow.itch.io

music by daydream anatomy
daydreamanatomy.bandcamp.com"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_control1" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 246.0
margin/right = 273.0
margin/bottom = 277.0
custom_fonts/font = ExtResource( 3 )
text = "> Z to begin"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_control2" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 267.0
margin/right = 273.0
margin/bottom = 298.0
custom_fonts/font = ExtResource( 3 )
text = "> X to show credits"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_control3" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 288.0
margin/right = 273.0
margin/bottom = 319.0
custom_fonts/font = ExtResource( 3 )
text = "> C to show controls"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


